// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: medium 1`] = `
":host {
  position: relative;
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  display: block;
  text-decoration: none;
  outline: 0;
}
a::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
a:focus::before {
  border-radius: 1px;
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
a:focus:not(:focus-visible)::before {
  outline: 0;
}
picture {
  display: block;
  width: 120px;
  height: 72px;
}
img {
  display: block;
  width: 100%;
  height: auto;
}"
`;

exports[`getComponentCss() should return correct css for size: responsive 1`] = `
":host {
  position: relative;
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  display: block;
  text-decoration: none;
  outline: 0;
}
a::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
a:focus::before {
  border-radius: 1px;
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
a:focus:not(:focus-visible)::before {
  outline: 0;
}
picture {
  display: block;
  width: 100px;
  height: 60px;
}
img {
  display: block;
  width: 100%;
  height: auto;
}
@media(min-width:1300px) {
  picture {
    width: 120px;
    height: 72px;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: small 1`] = `
":host {
  position: relative;
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  display: block;
  text-decoration: none;
  outline: 0;
}
a::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
a:focus::before {
  border-radius: 1px;
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
a:focus:not(:focus-visible)::before {
  outline: 0;
}
picture {
  display: block;
  width: 100px;
  height: 60px;
}
img {
  display: block;
  width: 100%;
  height: auto;
}"
`;
